--- a/PACK.HTML
+++ b/PACK.HTML
@@ -201,7 +201,8 @@
                             <thead class="bg-slate-50">
                                 <tr>
                                     <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Rule ID</th>
-                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Description</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Rule Type</th>
+                                    <th class="px-6 py-3 text-left text-xs font-medium text-slate-500 uppercase tracking-wider">Description / Details</th>
                                 </tr>
                             </thead>
                             <tbody id="packing-master-list" class="bg-white divide-y divide-slate-200"></tbody>
@@ -311,10 +312,13 @@
                 "CUST-C": { name: "Chatuchak Market Wholesalers", address: "Kamphaeng Phet 2 Rd, Chatuchak, Bangkok 10900, Thailand" }
             },
             packingRules: [
-                { id: "RULE-01", desc: "All items require polybagging." },
-                { id: "RULE-02", desc: "Include marketing insert #MKT-02." },
-                { id: "RULE-03", desc: "Must use a fixed-size box (GFS-BOX-S)." },
-                { id: "RULE-04", desc: "Attach hanger to each garment." }
+                { id: "RULE-01", type: "Packaging", desc: "All items require polybagging." },
+                { id: "RULE-02", type: "Inserts", desc: "Include marketing insert #MKT-02." },
+                { id: "RULE-03", type: "Packaging", desc: "Must use a fixed-size box (GFS-BOX-S)." },
+                { id: "RULE-04", type: "Packaging", desc: "Attach hanger to each garment." },
+                { id: "RULE-05", type: "Cartonization", desc: "Max 1 unique SKU per shipping carton (Solid Pack)." },
+                { id: "RULE-06", type: "Cartonization", desc: "Assortment Pack AP-KIDS-TEE required." },
+                { id: "RULE-07", type: "Cartonization", desc: "Single unit per carton." }
             ],
             cartonSizes: [
                 "Small - 10x8x4", "Medium - 12x9x4", "Large - 18x12x6", "X-Large - 24x18x6"
@@ -338,7 +342,7 @@
                     ],
                     packingRecommendation: {
                         boxSize: "Small - 10x8x4",
-                        rules: ["Must use a fixed-size box (GFS-BOX-S).", "Attach hanger to each garment."]
+                        rules: ["Must use a fixed-size box (GFS-BOX-S).", "Attach hanger to each garment.", "Max 1 unique SKU per shipping carton (Solid Pack)."]
                     }
                 },
                 "ORD-1003": {
@@ -350,7 +354,7 @@
                     ],
                      packingRecommendation: {
                         boxSize: "Large - 18x12x6",
-                        rules: ["No special requirements."]
+                        rules: ["Assortment Pack AP-KIDS-TEE required."]
                     }
                 }
             }
@@ -425,7 +429,6 @@
                 }
             });
 
-            // If switching to a master data screen, render its content
             if(screenId === 'customer-master-screen') renderCustomerMaster();
             if(screenId === 'packing-master-screen') renderPackingMaster();
             if(screenId === 'carton-master-screen') renderCartonMaster();
@@ -460,6 +463,15 @@
             }
         }
 
+        function getRuleTypeColor(type) {
+            switch (type) {
+                case 'Packaging': return 'bg-blue-100 text-blue-800';
+                case 'Inserts': return 'bg-purple-100 text-purple-800';
+                case 'Cartonization': return 'bg-yellow-100 text-yellow-800';
+                default: return 'bg-slate-100 text-slate-800';
+            }
+        }
+
         function renderPackingMaster() {
             const list = document.getElementById('packing-master-list');
             list.innerHTML = '';
@@ -467,6 +479,11 @@
                 const row = `
                     <tr>
                         <td class="px-6 py-4 whitespace-nowrap text-sm font-mono">${rule.id}</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+                            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full ${getRuleTypeColor(rule.type)}">
+                                ${rule.type}
+                            </span>
+                        </td>
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-slate-500">${rule.desc}</td>
                     </tr>
                 `;
